<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_theme_title"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="10dp">
            <View
                android:id="@+id/color_gray"
                android:layout_width="36dp"
                android:layout_height="36dp" />

            <TextView
                android:id="@+id/theme_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme_gray"
                android:textColor="@color/text_secondary"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="10dp">
        <View
            android:id="@+id/color_blue"
            android:layout_width="36dp"
            android:layout_height="36dp" />

            <TextView
                android:id="@+id/theme_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme_blue"
                android:textColor="@color/text_secondary"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="10dp">
            <View
                android:id="@+id/color_yellow"
                android:layout_width="36dp"
                android:layout_height="36dp" />

            <TextView
                android:id="@+id/theme_yellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme_yellow"
                android:textColor="@color/text_secondary"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="10dp">
            <View
                android:id="@+id/color_pink"
                android:layout_width="36dp"
                android:layout_height="36dp" />

            <TextView
                android:id="@+id/theme_pink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme_pink"
                android:textColor="@color/text_secondary"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>